--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/thlorenz/brace",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "w3c-blob": "0.0.1"
   },
   "devDependencies": {
